# ppb

./: .gitignore  AGENTS.md  FINISHING_PLAN.md  LICENSE  PPB.ipynb  README.md  REVIEW.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  leaderboard.yml
archive/: PPB.ipynb  README.md
docs/: CROSS_ANCESTRY.md  LIMITATIONS.md  METHOD.md  OVERLAP.md  REAL_DATA.md  TRANSFERABILITY.md
experiments/: README.md  __init__.py  benchmark_methods.py  cross_ancestry.py  figure_s1.py  overlap_detection.py  pc_adjustment.py  per_variant_n.py  pumas_agreement.py  transferability.py
results/: baseline-2026-07.json  schema.md
scripts/: bigsnpr_ldref_to_ppb.py  build_leaderboard.py  consortium_prep.py  eval_consortium.py  eval_panukb.py  panukb_checksums.tsv  panukb_download.sh  panukb_filter_hm3plus.py  regenerate_results.py  repack_ldref.py
src/ppb/: __init__.py  _kernels.py  cli.py  covariates.py  estimator.py  evaluate.py  harmonize.py  io.py  ld_backend.py  ldref.py  overlap.py  pumas.py  simulate.py  sumstats.py
tests/: test_benchmark.py  test_cli.py  test_covariates.py  test_cross_ancestry.py  test_estimator.py  test_figure_s1.py  test_harmonize.py  test_ld_backend.py  test_ld_int8.py  test_ldref.py  test_overlap.py  test_panukb_manifest.py  test_pumas.py  test_regenerate_results.py  test_results_registry.py  test_simulate.py  test_sumstats.py  test_transferability.py
