[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ppb"
version = "0.0.1.dev0"
description = "Cross-ancestry polygenic-score portability benchmark: summary-statistics-based (individual-level-data-free) R^2 measurement"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Bjarni J. Vilhjalmsson" },
]
dependencies = [
    "numpy>=1.24",
    "numba>=0.59",
]

[project.optional-dependencies]
test = ["pytest>=7"]
ldref = ["rdata>=1.0"]   # scripts/bigsnpr_ldref_to_ppb.py (reads R serializations)

[project.scripts]
ppb = "ppb.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
